--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -88,6 +88,7 @@
         android:layout_marginHorizontal="32dp"
         android:alpha="0"
         tools:alpha="100"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailTextView"
@@ -96,6 +97,7 @@
         <com.bogareksa.ui.auth.custom.EmailEditText
             android:id="@+id/emailEditText"
             android:layout_width="match_parent"
+            android:text="wudd404@gmail.com"
             android:layout_height="wrap_content"
             android:background="@drawable/edit_text_outline"
             android:inputType="textEmailAddress"
@@ -133,6 +135,7 @@
             android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="wudd404boga"
             android:background="@drawable/edit_text_outline"
             android:inputType="textPassword"
             tools:ignore="SpeakableTextPresentCheck" />
