--- a/app/src/main/res/layout/activity_upload_image.xml
+++ b/app/src/main/res/layout/activity_upload_image.xml
@@ -43,7 +43,7 @@
         app:layout_constraintVertical_bias="0.315" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnScan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save and Scan"
