--- a/app/src/main/res/layout/activity_product_list.xml
+++ b/app/src/main/res/layout/activity_product_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.penjual.listProductPage.ProductListActivity">
+    tools:context=".ui.penjual.listProductPage.component.ProductListActivity">
 
 <!--    <TextView-->
 <!--        android:id="@+id/testingResult"-->
