--- a/app/src/main/res/layout/activity_upload_image.xml
+++ b/app/src/main/res/layout/activity_upload_image.xml
@@ -70,10 +70,10 @@
 
     <ImageView
         android:id="@+id/backBtnUpload"
+        android:layout_width="33dp"
+        android:layout_height="40dp"
         android:contentDescription="backBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/back"
+        android:src="@drawable/arrowwhite"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
         app:layout_constraintHorizontal_bias="0.041"
